feat:新增AI对话界面

--- a/fronted/package.json
+++ b/fronted/package.json
@@ -14,7 +14,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@types/markdown-it": "^14.1.2",
     "axios": "^1.7.7",
+    "highlight.js": "^11.11.1",
+    "markdown-it": "^14.1.0",
     "pinia": "^2.1.7",
     "tdesign-vue-next": "^1.10.1",
     "volar": "^0.0.2",
